--- a/index.html
+++ b/index.html
@@ -1,1 +1,280 @@
-a
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>IΛCO VIVΛCI</title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icon/favicon-16x16.png">
+    <link rel="manifest" href="/icon/site.webmanifest">
+    <link rel="mask-icon" href="/icon/safari-pinned-tab.svg" color="#141414">
+    <link rel="shortcut icon" href="/icon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#141414">
+    <meta name="msapplication-config" content="/icon/browserconfig.xml">
+    <meta name="theme-color" content="#141414">
+
+    <!-- Bootstrap core CSS -->
+    <link href="config/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom fonts for this template -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <!-- <link href="config/fontawesome-free/css/all.min.css" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,700&display=swap&subset=greek" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700,700i&display=swap&subset=greek" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="config/grayscale.css" rel="stylesheet">
+
+    <!-- Global site tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158716451-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-158716451-1');
+    </script>
+    <script data-ad-client="ca-pub-8872772271246523" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</head>
+
+<body id="page-top">
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top" style="font-family: 'Comfortaa'">
+          <!-- <object data="img/rotary-white.svg" style="height: 2em; width: 2em; vertical-align: middle;" type="image/svg+xml" id="rotary-white">
+              <img src="img/rotary-white.png" style="height: 2em; width: 2em; vertical-align: middle;" />
+          </object>
+          <object data="img/rotary-pink.svg" style="height: 2em; width: 2em; vertical-align: middle; display:none;" type="image/svg+xml" id="rotary-pink">
+              <img src="img/rotary-pink.png" style="height: 2em; width: 2em; vertical-align: middle;" />
+          </object> -->
+          <i style="font-size: 30px;" class="fas fa-rocket text-primary-50 mb-2"></i>
+          <b>IΛCO VIVΛCI</b>
+      </a>
+      <!--
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        Menu
+        <i class="fas fa-bars"></i>
+      </button>
+      -->
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#about"><i class="far fa-heart fa-2x"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#projects"><i class="far fa-compass fa-2x"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contact"><i class="fab fa-youtube fa-2x"></i> <i class="fab fa-instagram fa-2x"></i></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Header -->
+  <header class="masthead">
+    <div class="container d-flex h-100 align-items-center">
+      <div class="mx-auto text-center">
+        <h1 class="my-0 mt-5">Hi, I'm IΛCO.</h1>
+        <h2 class="text-white mx-auto mt-5 mb-2">I strive to answer the question:</h2>
+        <h2 class="text-white mx-auto mt-2 mb-2">How can I take good care #tgc...</h2>
+        <h2 class="text-white mx-auto mt-2 mb-5">...of me, my people, & our world!</h2>
+        <a href="#about" class="btn btn-primary js-scroll-trigger">My passion</a>
+      </div>
+    </div>
+  </header>
+
+  <!-- About Section -->
+  <section id="about" class="about-section text-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 mx-auto">
+                <h6 class="text-white-50 mb-2">I Love Life... I am</h6>
+                <h1 class="text-white mb-4"><b>VIVΛCI<span class="text-white-50">TY</span></b></h1>
+                <i>
+                  <h5 class="text-white mx-auto">inspiringly energetic and enthusiastic;</h5>
+                  <h5 class="text-white mx-auto">exuberant liveliness and vitality;</h5>
+                  <h5 class="text-white mx-auto">the quality of being full of life;</h5>
+                  <h5 class="text-white mx-auto">attractive lust for life;</h5>
+                  <h5 class="text-white mx-auto">vivid love for life.</h5>
+                </i>
+                <a href="#projects" class="btn btn-primary js-scroll-trigger">My project</a>
+            </div>
+        </div>
+      <img src="img/earth.png" class="img-fluid mt-5" alt="">
+    </div>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects" class="projects-section bg-black">
+    <div class="container">
+
+      <div class="row align-items-center no-gutters mb-4">
+          <div class="col-xl-12 col-lg-12">
+              <h6 class="text-white-50 text-center">My direction / My purpose</h6>
+          </div>
+      </div>
+      <!-- Featured Project Row -->
+      <div class="row align-items-center no-gutters mb-4 mb-lg-5 project" style="cursor: pointer;" onclick="window.open('https://iaco.me/post/001')">
+        <div class="col-xl-8 col-lg-7">
+          <img class="img-fluid mb-3 mb-lg-0 project-img" src="img/light.jpg" alt="">
+          <div class="middle">vivaci.life</div>
+        </div>
+        <div class="col-xl-4 col-lg-5">
+          <div class="featured-text text-center text-lg-left">
+            <h4 class="text-white"><a href>vivaci.life</a></h4>
+            <h5 class="text-white mb-2">vivaci.life project is an effort to share with the world and inspire in people the love in taking good care #tgc of life, including ourselves, our beloved ones and our planet</h5>
+            <h5 class="text-white mb-0">Simply put, I love to #tgc of my life, and want to help others do the same :)</h5>
+          </div>
+        </div>
+      </div>
+
+      <!-- Project One Row -->
+      <!-- <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+        <div class="col-lg-6">
+          <img class="img-fluid" src="img/connection.jpg" alt="">
+        </div>
+        <div class="col-lg-6">
+          <div class="text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-left">
+                <h4 class="text-white">One</h4>
+                  <h5 class="mb-0 text-white">Homines enim eruditos et sobrios ut infaustos et inutiles vitant, eo quoque accedente quod et nomenclatores adsueti haec et talia venditare, mercede accepta lucris quosdam et prandiis inserunt subditicios ignobiles et obscuros.Homines enim eruditos et sobrios ut infaustos et inutiles vitant, eo quoque accedente quod.
+                  </h5>
+                <hr class="d-none d-lg-block mb-0 ml-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div> -->
+
+      <!-- Project Two Row -->
+      <!-- <div class="row justify-content-center no-gutters">
+        <div class="col-lg-6">
+          <img class="img-fluid" src="img/inspire.jpg" alt="">
+        </div>
+        <div class="col-lg-6 order-lg-first">
+          <div class="text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-right">
+                <h4 class="text-white">Two</h4>
+                  <h5 class="mb-0 text-white">Homines enim eruditos et sobrios ut infaustos et inutiles vitant, eo quoque accedente quod et nomenclatores adsueti haec et talia venditare, mercede accepta lucris quosdam et prandiis inserunt subditicios ignobiles.</h5>
+                <hr class="d-none d-lg-block mb-0 mr-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div> -->
+
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="contact-section bg-black">
+    <div class="container">
+
+      <!-- <div class="row">
+        <div class="col-md-4 mb-3 mb-md-0">
+          <a href="mailto:hi@iaco.me">
+            <div class="card py-4 h-100">
+              <div class="card-body text-center">
+                <i class="far fa-envelope fa-2x text-white mb-2"></i>
+                <h5 class="text-white m-0">Send me a letter</h5>
+                <hr class="my-4">
+                <div class="text-white">hi@iaco.me</div>
+              </div>
+            </div>
+          </a>
+        </div>  -->
+
+        <div class="col-md-6 mb-6 mb-md-0">
+          <a target="_blank" href="https://iaco.me/youtube">
+            <div class="card py-4 h-100">
+              <div class="card-body text-center">
+                <i class="fab fa-youtube fa-2x text-white mb-2"></i>
+                <h5 class="text-white m-0">Subscribe</h5>
+                <hr class="my-4">
+                <div class="text-white">IΛCO VIVΛCI</div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-md-6 mb-6 mb-md-0">
+          <a target="_blank" href="https://iaco.me/instagram">
+            <div class="card py-4 h-100">
+              <div class="card-body text-center">
+                <i class="fab fa-instagram fa-2x text-white mb-2"></i>
+                <h5 class="text-white m-0">Follow the next adventure</h5>
+                <hr class="my-4">
+                <div class="text-white">@iaco.me</div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+      </div>
+
+    </div>
+  </section>
+
+
+  <!-- Signup Section -->
+  <!-- <section id="signup" class="signup-section bg-black" style="">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 col-lg-6 mx-auto my-auto text-center">
+
+          <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
+          <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
+
+          <form class="form-inline d-flex">
+            <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address...">
+            <button type="submit" class="btn btn-primary mx-auto">Subscribe</button>
+          </form>
+
+        </div>
+      </div>
+    </div>
+  </section> -->
+
+  <!-- Footer -->
+  <footer class="bg-black small text-center text-white-50">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 mx-auto justify-content-center social">
+            Thanks for visiting, see you again soon.
+            <br/><br/>
+            IACO VIVACI
+            <br/><br/>
+            <a href="mailto:hi@iaco.me"><i class="far fa-envelope text-white"></i></a> send me a letter
+            <br/><br/>
+            <a href="https://iaco.me/terms"><i class="far fa-copyright text-white"></i></a> rights and terms
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="config/jquery/jquery.min.js"></script>
+  <script src="config/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="config/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom scripts for this template -->
+  <script src="config/grayscale.js"></script>
+
+</body>
+
+</html>
