--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>IΛCO VIVΛCI</title>
+    <title>be 100% you - Develop your full potential!</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/icon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/icon/favicon-32x32.png">
@@ -33,7 +33,7 @@
     <link href="config/grayscale.css" rel="stylesheet">
 
     <!-- Global site tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158716451-1"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158716451-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -41,7 +41,7 @@
 
       gtag('config', 'UA-158716451-1');
     </script>
-    <script data-ad-client="ca-pub-8872772271246523" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script data-ad-client="ca-pub-8872772271246523" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 </head>
 
 <body id="page-top">
@@ -57,7 +57,7 @@
               <img src="img/rotary-pink.png" style="height: 2em; width: 2em; vertical-align: middle;" />
           </object> -->
           <i style="font-size: 30px;" class="fas fa-rocket text-primary-50 mb-2"></i>
-          <b>IΛCO VIVΛCI</b>
+          <b>be 100 you</b>
       </a>
       <!--
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -183,8 +183,9 @@
   <section id="contact" class="contact-section bg-black">
     <div class="container">
 
-      <!-- <div class="row">
-        <div class="col-md-4 mb-3 mb-md-0">
+      <div class="row">
+
+        <!-- <div class="col-md-4 mb-3 mb-md-0">
           <a href="mailto:hi@iaco.me">
             <div class="card py-4 h-100">
               <div class="card-body text-center">
@@ -197,12 +198,12 @@
           </a>
         </div>  -->
 
-        <div class="col-md-6 mb-6 mb-md-0">
+        <div class="col-md-6 mb-9 mb-md-0">
           <a target="_blank" href="https://iaco.me/youtube">
             <div class="card py-4 h-100">
               <div class="card-body text-center">
                 <i class="fab fa-youtube fa-2x text-white mb-2"></i>
-                <h5 class="text-white m-0">Subscribe</h5>
+                <h5 class="text-white m-0">Greatest adventures are here</h5>
                 <hr class="my-4">
                 <div class="text-white">IΛCO VIVΛCI</div>
               </div>
@@ -210,12 +211,12 @@
           </a>
         </div>
 
-        <div class="col-md-6 mb-6 mb-md-0">
+        <div class="col-md-6 mb-9 mb-md-0">
           <a target="_blank" href="https://iaco.me/instagram">
             <div class="card py-4 h-100">
               <div class="card-body text-center">
                 <i class="fab fa-instagram fa-2x text-white mb-2"></i>
-                <h5 class="text-white m-0">Follow the next adventure</h5>
+                <h5 class="text-white m-0">Follow the next adventures</h5>
                 <hr class="my-4">
                 <div class="text-white">@iaco.me</div>
               </div>
@@ -257,9 +258,9 @@
             <br/><br/>
             IACO VIVACI
             <br/><br/>
-            <a href="mailto:hi@iaco.me"><i class="far fa-envelope text-white"></i></a> send me a letter
+            <a href="mailto:hi@iaco.me"><i class="far fa-envelope"></i></a> send me a letter
             <br/><br/>
-            <a href="https://iaco.me/terms"><i class="far fa-copyright text-white"></i></a> rights and terms
+            <a href="https://iaco.me/terms"><i class="far fa-copyright"></i></a> rights and terms
         </div>
       </div>
     </div>
