--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
           <object data="img/rotary-pink.svg" style="height: 2em; width: 2em; vertical-align: middle; display:none;" type="image/svg+xml" id="rotary-pink">
               <img src="img/rotary-pink.png" style="height: 2em; width: 2em; vertical-align: middle;" />
           </object> -->
-          <i style="font-size: 30px;" class="fas fa-rocket text-primary-50 mb-2"></i>
-          <b>be 100 you</b>
+          <i style="font-size: 30px;" class="fas fa-mountain text-primary-50 mb-2"></i>
+          <b>be 100% you</b>
       </a>
       <!--
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
