--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top" style="font-family: 'Comfortaa'">
-          <!-- <object data="img/rotary-white.svg" style="height: 2em; width: 2em; vertical-align: middle;" type="image/svg+xml" id="rotary-white">
-              <img src="img/rotary-white.png" style="height: 2em; width: 2em; vertical-align: middle;" />
+          <object data="img/summit.svg" style="height: 2em; width: 2em; vertical-align: middle;" type="image/svg+xml" id="rotary-white">
+              <img src="img/summit.png" style="height: 2em; width: 2em; vertical-align: middle;" />
           </object>
           <object data="img/rotary-pink.svg" style="height: 2em; width: 2em; vertical-align: middle; display:none;" type="image/svg+xml" id="rotary-pink">
               <img src="img/rotary-pink.png" style="height: 2em; width: 2em; vertical-align: middle;" />
-          </object> -->
-          <i style="font-size: 30px;" class="fas fa-mountain text-primary-50 mb-2"></i>
+          </object>
+          <!-- <i style="font-size: 30px;" class="fas fa-mountain text-primary-50 mb-2"></i> -->
           <b>be 100% you</b>
       </a>
       <!--
