--- a/index.html
+++ b/index.html
@@ -50,11 +50,8 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top" style="font-family: 'Comfortaa'">
-          <object data="img/summit.svg" style="height: 2em; width: 2em; vertical-align: middle;" type="image/svg+xml" id="rotary-white">
+          <object data="img/summit.svg" style="height: 2em; width: 2em; vertical-align: middle;" type="image/svg+xml">
               <img src="img/summit.png" style="height: 2em; width: 2em; vertical-align: middle;" />
-          </object>
-          <object data="img/rotary-pink.svg" style="height: 2em; width: 2em; vertical-align: middle; display:none;" type="image/svg+xml" id="rotary-pink">
-              <img src="img/rotary-pink.png" style="height: 2em; width: 2em; vertical-align: middle;" />
           </object>
           <!-- <i style="font-size: 30px;" class="fas fa-mountain text-primary-50 mb-2"></i> -->
           <b>be 100% you</b>
@@ -74,7 +71,7 @@
             <a class="nav-link js-scroll-trigger" href="#projects"><i class="far fa-compass fa-2x"></i></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact"><i class="fab fa-youtube fa-2x"></i> <i class="fab fa-instagram fa-2x"></i></a>
+            <a class="nav-link js-scroll-trigger" href="#contact"><i class="fab fa-instagram fa-2x"></i></a>
           </li>
         </ul>
       </div>
