--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about"><i class="far fa-heart fa-2x"></i></a>
+            <a class="nav-link js-scroll-trigger" href="#about"><i class="far fa-running fa-2x"></i> <i class="far fa-dumbbell fa-2x"></i></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects"><i class="far fa-compass fa-2x"></i></a>
+            <a class="nav-link js-scroll-trigger" href="#projects"><i class="far fa-utensil-spoon fa-2x"></i> <i class="far fa-apple-alt fa-2x"></i></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact"><i class="fab fa-instagram fa-2x"></i></a>
+            <a class="nav-link js-scroll-trigger" href="#contact"><i class="far fa-user fa-2x"></i> <i class="fas fa-user fa-2x"></i></a>
           </li>
         </ul>
       </div>
