--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top" style="font-family: 'Comfortaa'">
-          <object data="img/summit.svg" style="height: 2em; width: 2em; vertical-align: middle;" type="image/svg+xml">
-              <img src="img/summit.png" style="height: 2em; width: 2em; vertical-align: middle;" />
+          <object data="img/summit.svg" style="height: 4em; width: 4em; vertical-align: middle;" type="image/svg+xml">
+              <img src="img/summit.png" style="height: 4em; width: 4em; vertical-align: middle;" />
           </object>
           <!-- <i style="font-size: 30px;" class="fas fa-mountain text-primary-50 mb-2"></i> -->
           <b>be 100% you</b>
@@ -65,10 +65,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about"><i class="far fa-running fa-2x"></i> <i class="far fa-dumbbell fa-2x"></i></a>
+            <a class="nav-link js-scroll-trigger" href="#about"><i class="fas fa-running fa-2x"></i> <i class="fas fa-dumbbell fa-2x"></i></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects"><i class="far fa-utensil-spoon fa-2x"></i> <i class="far fa-apple-alt fa-2x"></i></a>
+            <a class="nav-link js-scroll-trigger" href="#projects"><i class="fas fa-utensil-spoon fa-2x"></i> <i class="fas fa-apple-alt fa-2x"></i></a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact"><i class="far fa-user fa-2x"></i> <i class="fas fa-user fa-2x"></i></a>
