--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>be 100% you - Develop your full potential!</title>
+    <title>be100you - Develop your full potential!</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/icon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/icon/favicon-32x32.png">
@@ -54,7 +54,7 @@
               <img src="img/summit.png" style="height: 4em; width: 4em; vertical-align: middle;" />
           </object>
           <!-- <i style="font-size: 30px;" class="fas fa-mountain text-primary-50 mb-2"></i> -->
-          <b>be 100% you</b>
+          <b>be100you</b>
       </a>
       <!--
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -200,22 +200,22 @@
             <div class="card py-4 h-100">
               <div class="card-body text-center">
                 <i class="fab fa-youtube fa-2x text-white mb-2"></i>
-                <h5 class="text-white m-0">Greatest adventures are here</h5>
+                <h5 class="text-white m-0">The guy striving for mind and body synergy</h5>
                 <hr class="my-4">
-                <div class="text-white">IΛCO VIVΛCI</div>
+                <div class="text-white">Thomas Tournu</div>
               </div>
             </div>
           </a>
         </div>
 
         <div class="col-md-6 mb-9 mb-md-0">
-          <a target="_blank" href="https://iaco.me/instagram">
+          <a target="_blank" href="https://iaco.me/favs">
             <div class="card py-4 h-100">
               <div class="card-body text-center">
                 <i class="fab fa-instagram fa-2x text-white mb-2"></i>
-                <h5 class="text-white m-0">Follow the next adventures</h5>
+                <h5 class="text-white m-0">The guy passionate about life and #tgc</h5>
                 <hr class="my-4">
-                <div class="text-white">@iaco.me</div>
+                <div class="text-white">IΛCO VIVΛCI</div>
               </div>
             </div>
           </a>
@@ -253,9 +253,9 @@
         <div class="col-lg-12 mx-auto justify-content-center social">
             Thanks for visiting, see you again soon.
             <br/><br/>
-            IACO VIVACI
+            be100you
             <br/><br/>
-            <a href="mailto:hi@iaco.me"><i class="far fa-envelope"></i></a> send me a letter
+            <a href="mailto:hi@iaco.me"><i class="far fa-envelope"></i></a> send us a letter
             <br/><br/>
             <a href="https://iaco.me/terms"><i class="far fa-copyright"></i></a> rights and terms
         </div>
