--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <h1 class="my-0 mt-5">Hi, I'm IΛCO.</h1>
-        <h2 class="text-white mx-auto mt-5 mb-2">I strive to answer the question:</h2>
-        <h2 class="text-white mx-auto mt-2 mb-2">How can I take good care #tgc...</h2>
-        <h2 class="text-white mx-auto mt-2 mb-5">...of me, my people, & our world!</h2>
+        <h1 class="my-0 mt-5">be 100 you</h1>
+        <h2 class="text-white mx-auto mt-5 mb-2">Develop your full potential!</h2>
+        <h2 class="text-white mx-auto mt-2 mb-2">Take good care #tgc of you mind and body</h2>
+        <h2 class="text-white mx-auto mt-2 mb-5">Improve exercising, eating and sleeping</h2>
         <a href="#about" class="btn btn-primary js-scroll-trigger">My passion</a>
       </div>
     </div>
