--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           <a target="_blank" href="https://iaco.me/youtube">
             <div class="card py-4 h-100">
               <div class="card-body text-center">
-                <i class="fab fa-youtube fa-2x text-white mb-2"></i>
+                <i class="far fa-user fa-2x text-white mb-2"></i>
                 <h5 class="text-white m-0">The guy striving for mind and body synergy</h5>
                 <hr class="my-4">
                 <div class="text-white">Thomas Tournu</div>
@@ -212,7 +212,7 @@
           <a target="_blank" href="https://iaco.me/favs">
             <div class="card py-4 h-100">
               <div class="card-body text-center">
-                <i class="fab fa-instagram fa-2x text-white mb-2"></i>
+                <i class="fas fa-user fa-2x text-white mb-2"></i>
                 <h5 class="text-white m-0">The guy passionate about life and #tgc</h5>
                 <hr class="my-4">
                 <div class="text-white">IΛCO VIVΛCI</div>
