--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="mx-auto text-center">
         <h1 class="my-0 mt-5">be 100 you</h1>
         <h2 class="text-white mx-auto mt-5 mb-2">Develop your full potential!</h2>
-        <h2 class="text-white mx-auto mt-2 mb-2">Take good care #tgc of mind & body</h2>
+        <h2 class="text-white mx-auto mt-2 mb-2">Take good care of your mind & body</h2>
         <h2 class="text-white mx-auto mt-2 mb-5">Improve exercising, eating & sleeping</h2>
         <a href="#about" class="btn btn-primary js-scroll-trigger">My passion</a>
       </div>
