--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
             <a class="nav-link js-scroll-trigger" href="#projects"><i class="fas fa-utensil-spoon fa-2x"></i> <i class="fas fa-apple-alt fa-2x"></i></a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contact"><i class="fas fa-bed fa-2x"></i> <i class="fas fa-cloud-moon fa-2x"></i></a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact"><i class="far fa-user fa-2x"></i> <i class="fas fa-user fa-2x"></i></a>
           </li>
         </ul>
