--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         </div>  -->
 
         <div class="col-md-6 mb-9 mb-md-0">
-          <a target="_blank" href="https://iaco.me/youtube">
+          <a target="_blank" href="http://instagram.com/thomas_tournu">
             <div class="card py-4 h-100">
               <div class="card-body text-center">
                 <i class="far fa-user fa-2x text-white mb-2"></i>
