--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <i class="far fa-user fa-2x text-white mb-2"></i>
                 <h5 class="text-white m-0">The guy striving for mind and body synergy</h5>
                 <hr class="my-4">
-                <div class="text-white">Thomas Tournu</div>
+                <div class="text-white">THOMΛS TOURNU</div>
               </div>
             </div>
           </a>
