--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about"><i class="fas fa-running fa-2x"></i> <i class="fas fa-dumbbell fa-2x"></i></a>
+            <a class="nav-link js-scroll-trigger" href="#execise"><i class="fas fa-running fa-2x"></i> <i class="fas fa-dumbbell fa-2x"></i></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects"><i class="fas fa-utensil-spoon fa-2x"></i> <i class="fas fa-apple-alt fa-2x"></i></a>
+            <a class="nav-link js-scroll-trigger" href="#nutrition"><i class="fas fa-utensil-spoon fa-2x"></i> <i class="fas fa-apple-alt fa-2x"></i></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact"><i class="fas fa-cloud-moon fa-2x"></i> <i class="fas fa-bed fa-2x"></i></a>
+            <a class="nav-link js-scroll-trigger" href="#sleep"><i class="fas fa-cloud-moon fa-2x"></i> <i class="fas fa-bed fa-2x"></i></a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact"><i class="far fa-user fa-2x"></i> <i class="fas fa-user fa-2x"></i></a>
@@ -88,14 +88,14 @@
         <h1 class="my-0 mt-5">be 100 you</h1>
         <h2 class="text-white mx-auto mt-5 mb-2">Develop your full potential!</h2>
         <h2 class="text-white mx-auto mt-2 mb-2">Take good care of your mind & body</h2>
-        <h2 class="text-white mx-auto mt-2 mb-5">Improve exercising, eating & sleeping</h2>
-        <a href="#about" class="btn btn-primary js-scroll-trigger">My passion</a>
+        <h2 class="text-white mx-auto mt-2 mb-5">Improve your exercise, nutrition & sleep</h2>
+        <a href="#exercise" class="btn btn-primary js-scroll-trigger"><i class="fas fa-running"></i><i class="fas fa-dumbbell"></i></a>
       </div>
     </div>
   </header>
 
   <!-- About Section -->
-  <section id="about" class="about-section text-center">
+  <section id="exercise" class="about-section text-center">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto">
@@ -108,7 +108,7 @@
                   <h5 class="text-white mx-auto">attractive lust for life;</h5>
                   <h5 class="text-white mx-auto">vivid love for life.</h5>
                 </i>
-                <a href="#projects" class="btn btn-primary js-scroll-trigger">My project</a>
+                <a href="#nutrition" class="btn btn-primary js-scroll-trigger"><i class="fas fa-utensil-spoon"></i><i class="fas fa-apple-alt"></i></a>
             </div>
         </div>
       <img src="img/earth.png" class="img-fluid mt-5" alt="">
@@ -116,7 +116,7 @@
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="projects-section bg-black">
+  <section id="nutrition" class="projects-section bg-black">
     <div class="container">
 
       <div class="row align-items-center no-gutters mb-4">
@@ -135,12 +135,13 @@
             <h4 class="text-white"><a href>vivaci.life</a></h4>
             <h5 class="text-white mb-2">vivaci.life project is an effort to share with the world and inspire in people the love in taking good care #tgc of life, including ourselves, our beloved ones and our planet</h5>
             <h5 class="text-white mb-0">Simply put, I love to #tgc of my life, and want to help others do the same :)</h5>
+            <a href="#sleep" class="btn btn-primary js-scroll-trigger"><i class="fas fa-cloud-moon"></i><i class="fas fa-bed"></i></a>
           </div>
         </div>
       </div>
 
       <!-- Project One Row -->
-      <!-- <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+      <div id="sleep" class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/connection.jpg" alt="">
         </div>
@@ -156,10 +157,10 @@
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
 
       <!-- Project Two Row -->
-      <!-- <div class="row justify-content-center no-gutters">
+      <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/inspire.jpg" alt="">
         </div>
@@ -174,7 +175,7 @@
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
 
     </div>
   </section>
