--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto">
-                <h6 class="text-white-50 mb-2">I Love Life... I am</h6>
+                <h6 class="text-white-50 mb-2">EXERCISE</h6>
                 <h1 class="text-white mb-4"><b>VIVΛCI<span class="text-white-50">TY</span></b></h1>
                 <i>
                   <h5 class="text-white mx-auto">inspiringly energetic and enthusiastic;</h5>
@@ -121,7 +121,7 @@
 
       <div class="row align-items-center no-gutters mb-4">
           <div class="col-xl-12 col-lg-12">
-              <h6 class="text-white-50 text-center">My direction / My purpose</h6>
+              <h6 class="text-white-50 text-center">NUTRITION</h6>
           </div>
       </div>
       <!-- Featured Project Row -->
@@ -140,8 +140,14 @@
         </div>
       </div>
 
+        
+      <div id="sleep" class="row align-items-center no-gutters mb-4">
+          <div class="col-xl-12 col-lg-12">
+              <h6 class="text-white-50 text-center">SLEEP</h6>
+          </div>
+      </div>
       <!-- Project One Row -->
-      <div id="sleep" class="row justify-content-center no-gutters mb-5 mb-lg-0">
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/connection.jpg" alt="">
         </div>
