--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <h2 class="text-white mx-auto mt-5 mb-2">Develop your full potential!</h2>
         <h2 class="text-white mx-auto mt-2 mb-2">Take good care of your mind & body</h2>
         <h2 class="text-white mx-auto mt-2 mb-5">Improve your exercise, nutrition & sleep</h2>
-        <a href="#exercise" class="btn btn-primary js-scroll-trigger"><i class="fas fa-running"></i><i class="fas fa-dumbbell"></i></a>
+        <a href="#exercise" class="btn btn-primary js-scroll-trigger"><i class="fas fa-running fa-lg"></i><i class="fas fa-dumbbell fa-lg"></i></a>
       </div>
     </div>
   </header>
@@ -108,7 +108,7 @@
                   <h5 class="text-white mx-auto">attractive lust for life;</h5>
                   <h5 class="text-white mx-auto">vivid love for life.</h5>
                 </i>
-                <a href="#nutrition" class="btn btn-primary js-scroll-trigger"><i class="fas fa-utensil-spoon"></i><i class="fas fa-apple-alt"></i></a>
+                <a href="#nutrition" class="btn btn-primary js-scroll-trigger"><i class="fas fa-utensil-spoon fa-lg"></i><i class="fas fa-apple-alt fa-lg"></i></a>
             </div>
         </div>
       <img src="img/earth.png" class="img-fluid mt-5" alt="">
@@ -135,7 +135,7 @@
             <h4 class="text-white"><a href>vivaci.life</a></h4>
             <h5 class="text-white mb-2">vivaci.life project is an effort to share with the world and inspire in people the love in taking good care #tgc of life, including ourselves, our beloved ones and our planet</h5>
             <h5 class="text-white mb-0">Simply put, I love to #tgc of my life, and want to help others do the same :)</h5>
-            <a href="#sleep" class="btn btn-primary js-scroll-trigger"><i class="fas fa-cloud-moon"></i><i class="fas fa-bed"></i></a>
+            <a href="#sleep" class="btn btn-primary js-scroll-trigger"><i class="fas fa-cloud-moon fa-lg"></i><i class="fas fa-bed fa-lg"></i></a>
           </div>
         </div>
       </div>
