--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
                   <h5 class="text-white mx-auto">attractive lust for life;</h5>
                   <h5 class="text-white mx-auto">vivid love for life.</h5>
                 </i>
-                <a href="#nutrition" class="btn btn-primary js-scroll-trigger"><i class="fas fa-utensil-spoon fa-lg"></i><i class="fas fa-apple-alt fa-lg"></i></a>
+                <a href="#exercise" class="btn btn-primary js-scroll-trigger"><i class="fas fa-running fa-2x"></i> <i class="fas fa-dumbbell fa-2x"></i></a>
+                <a href="#nutrition" class="btn btn-primary js-scroll-trigger"><i class="fas fa-utensil-spoon fa-2x"></i> <i class="fas fa-apple-alt fa-2x"></i></a>
+                <a href="#sleep" class="btn btn-primary js-scroll-trigger"><i class="fas fa-cloud-moon fa-2x"></i> <i class="fas fa-bed fa-2x"></i></a>
             </div>
         </div>
       <img src="img/earth.png" class="img-fluid mt-5" alt="">
@@ -134,7 +136,6 @@
             <h4 class="text-white"><a href>vivaci.life</a></h4>
             <h5 class="text-white mb-2">vivaci.life project is an effort to share with the world and inspire in people the love in taking good care #tgc of life, including ourselves, our beloved ones and our planet</h5>
             <h5 class="text-white mb-0">Simply put, I love to #tgc of my life, and want to help others do the same :)</h5>
-            <a href="#sleep" class="btn btn-primary js-scroll-trigger"><i class="fas fa-cloud-moon fa-lg"></i><i class="fas fa-bed fa-lg"></i></a>
           </div>
         </div>
       </div>
@@ -199,7 +200,6 @@
             <h4 class="text-white"><a href>vivaci.life</a></h4>
             <h5 class="text-white mb-2">vivaci.life project is an effort to share with the world and inspire in people the love in taking good care #tgc of life, including ourselves, our beloved ones and our planet</h5>
             <h5 class="text-white mb-0">Simply put, I love to #tgc of my life, and want to help others do the same :)</h5>
-            <a href="#sleep" class="btn btn-primary js-scroll-trigger"><i class="fas fa-cloud-moon fa-lg"></i><i class="fas fa-bed fa-lg"></i></a>
           </div>
         </div>
       </div>
@@ -264,7 +264,6 @@
             <h4 class="text-white"><a href>vivaci.life</a></h4>
             <h5 class="text-white mb-2">vivaci.life project is an effort to share with the world and inspire in people the love in taking good care #tgc of life, including ourselves, our beloved ones and our planet</h5>
             <h5 class="text-white mb-0">Simply put, I love to #tgc of my life, and want to help others do the same :)</h5>
-            <a href="#sleep" class="btn btn-primary js-scroll-trigger"><i class="fas fa-cloud-moon fa-lg"></i><i class="fas fa-bed fa-lg"></i></a>
           </div>
         </div>
       </div>
