--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
         <h2 class="text-white mx-auto mt-5 mb-2">Develop your full potential!</h2>
         <h2 class="text-white mx-auto mt-2 mb-2">Take good care of your mind & body</h2>
         <h2 class="text-white mx-auto mt-2 mb-5">Improve your exercise, nutrition & sleep</h2>
-        <a href="#exercise" class="btn btn-primary js-scroll-trigger">The Golden Triangle</a>
+        <a href="#triangle" class="btn btn-primary js-scroll-trigger">The Golden Triangle</a>
       </div>
     </div>
   </header>
 
   <!-- About Section -->
-  <section id="exercise" class="about-section text-center">
+  <section id="triangle" class="about-section text-center">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto">
@@ -250,7 +250,7 @@
 
       <div class="row align-items-center no-gutters mb-4">
           <div class="col-xl-12 col-lg-12">
-              <h6 class="text-white-50 text-center">NUTRITION</h6>
+              <h6 class="text-white-50 text-center">SLEEP</h6>
           </div>
       </div>
       <!-- Featured Project Row -->
