--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <h2 class="text-white mx-auto mt-5 mb-2">Develop your full potential!</h2>
         <h2 class="text-white mx-auto mt-2 mb-2">Take good care of your mind & body</h2>
         <h2 class="text-white mx-auto mt-2 mb-5">Improve your exercise, nutrition & sleep</h2>
-        <a href="#triangle" class="btn btn-primary js-scroll-trigger">The Golden Triangle</a>
+        <a href="#triangle" class="btn btn-primary js-scroll-trigger"><i class="fas fa-caret-right"></i> The Golden Triangle <i class="fas fa-caret-left"></i></a>
       </div>
     </div>
   </header>
