--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <a class="nav-link js-scroll-trigger" href="#nutrition"><i class="fas fa-utensil-spoon fa-2x"></i> <i class="fas fa-apple-alt fa-2x"></i></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#sleep"><i class="fas fa-cloud-moon fa-2x"></i> <i class="fas fa-bed fa-2x"></i></a>
+            <a class="nav-link js-scroll-trigger" href="#rest"><i class="fas fa-cloud-moon fa-2x"></i> <i class="fas fa-bed fa-2x"></i></a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact"><i class="far fa-user fa-2x"></i> <i class="fas fa-user fa-2x"></i></a>
@@ -88,8 +88,8 @@
         <h1 class="my-0 mt-5">be 100 you</h1>
         <h2 class="text-white mx-auto mt-5 mb-2">Develop your full potential!</h2>
         <h2 class="text-white mx-auto mt-2 mb-2">Take good care of your mind & body</h2>
-        <h2 class="text-white mx-auto mt-2 mb-5">Improve your exercise, nutrition & sleep</h2>
-        <a href="#triangle" class="btn btn-primary js-scroll-trigger"><i class="fas fa-caret-right"></i> The Golden Triangle <i class="fas fa-caret-left"></i></a>
+        <h2 class="text-white mx-auto mt-2 mb-5">Improve your exercise, nutrition & rest</h2>
+        <a href="#triangle" class="btn btn-primary js-scroll-trigger"><i class="fas fa-caret-right"></i> Your Golden Triangle <i class="fas fa-caret-left"></i></a>
       </div>
     </div>
   </header>
@@ -101,15 +101,17 @@
             <div class="col-lg-8 mx-auto">
                 <h1 class="text-white mb-4">The Golden Triangle</h1>
                 <i>
-                  <h5 class="text-white mx-auto">inspiringly energetic and enthusiastic;</h5>
-                  <h5 class="text-white mx-auto">exuberant liveliness and vitality;</h5>
-                  <h5 class="text-white mx-auto">the quality of being full of life;</h5>
-                  <h5 class="text-white mx-auto">attractive lust for life;</h5>
+                  <h5 class="text-white mx-auto">Our physical health has 3 main components:</h5>
+                  <h5 class="text-white mx-auto">The exercising - running, gym, sports, etc.</h5>
+                  <h5 class="text-white mx-auto">The nutrition - macro & micronutrients, energy, etc.</h5>
+                  <h5 class="text-white mx-auto">The rest - sleep quality, peace of mind, stress</h5>
                   <h5 class="text-white mx-auto">vivid love for life.</h5>
                 </i>
-                <a href="#exercise" class="btn btn-primary js-scroll-trigger"><i class="fas fa-running fa-2x"></i> <i class="fas fa-dumbbell fa-2x"></i></a>
-                <a href="#nutrition" class="btn btn-primary js-scroll-trigger"><i class="fas fa-utensil-spoon fa-2x"></i> <i class="fas fa-apple-alt fa-2x"></i></a>
-                <a href="#sleep" class="btn btn-primary js-scroll-trigger"><i class="fas fa-cloud-moon fa-2x"></i> <i class="fas fa-bed fa-2x"></i></a>
+                <a href="#exercise" class="btn btn-primary js-scroll-trigger"><i class="fas fa-running fa-2x"></i> <i class="fas fa-dumbbell fa-2x"></i> Exercise</a>
+                <br/>
+                <a href="#nutrition" class="btn btn-primary js-scroll-trigger"><i class="fas fa-utensil-spoon fa-2x"></i> <i class="fas fa-apple-alt fa-2x"></i> Nutrition</a>
+                <br/>
+                <a href="#rest" class="btn btn-primary js-scroll-trigger"><i class="fas fa-cloud-moon fa-2x"></i> <i class="fas fa-bed fa-2x"></i> Rest</a>
             </div>
         </div>
       <img src="img/earth.png" class="img-fluid mt-5" alt="">
@@ -245,12 +247,12 @@
   </section>
 
   <!-- Projects Section -->
-  <section id="sleep" class="projects-section bg-black">
+  <section id="rest" class="projects-section bg-black">
     <div class="container">
 
       <div class="row align-items-center no-gutters mb-4">
           <div class="col-xl-12 col-lg-12">
-              <h6 class="text-white-50 text-center">SLEEP</h6>
+              <h6 class="text-white-50 text-center">REST</h6>
           </div>
       </div>
       <!-- Featured Project Row -->
