--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                 <h1 class="text-white mb-4">The Golden Triangle</h1>
                 <i>
                   <h5 class="text-white mx-auto">Our physical health has 3 main components:</h5>
-                  <h5 class="text-white mx-auto">The exercising - running, gym, sports, etc.</h5>
-                  <h5 class="text-white mx-auto">The nutrition - macro & micronutrients, energy, etc.</h5>
-                  <h5 class="text-white mx-auto">The rest - sleep quality, peace of mind, stress</h5>
+                  <h5 class="text-white mx-auto">The exercising - running, gym, sports, warm-up, etc.</h5>
+                  <h5 class="text-white mx-auto">The nutrition - macro & micronutrients, energy sources, etc.</h5>
+                  <h5 class="text-white mx-auto">The rest - sleep quality, peace of mind, stress/anxiety controln, etc.</h5>
                   <h5 class="text-white mx-auto">vivid love for life.</h5>
                 </i>
                 <a href="#exercise" class="btn btn-primary js-scroll-trigger"><i class="fas fa-running fa-2x" style="vertical-align: bottom;"></i> <i class="fas fa-dumbbell fa-2x" style="vertical-align: bottom;"></i> Exercise</a>
