--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
                   <h5 class="text-white mx-auto">The rest - sleep quality, peace of mind, stress/anxiety controln, etc.</h5>
                   <h5 class="text-white mx-auto">vivid love for life.</h5>
                 </i>
-                <a href="#exercise" class="btn btn-primary js-scroll-trigger"><i class="fas fa-running fa-2x" style="vertical-align: bottom;"></i> <i class="fas fa-dumbbell fa-2x" style="vertical-align: bottom;"></i> Exercise</a>
+                <a href="#exercise" class="btn btn-primary js-scroll-trigger"><i class="fas fa-running fa-2x"></i> <i class="fas fa-dumbbell fa-2x"></i></a>
                 <br/>
-                <a href="#nutrition" class="btn btn-primary js-scroll-trigger"><i class="fas fa-utensil-spoon fa-2x" style="vertical-align: bottom;"></i> <i class="fas fa-apple-alt fa-2x" style="vertical-align: bottom;"></i> Nutrition</a>
+                <a href="#nutrition" class="btn btn-primary js-scroll-trigger"><i class="fas fa-utensil-spoon fa-2x"></i> <i class="fas fa-apple-alt fa-2x"></i></a>
                 <br/>
-                <a href="#rest" class="btn btn-primary js-scroll-trigger"><i class="fas fa-cloud-moon fa-2x" style="vertical-align: bottom;"></i> <i class="fas fa-bed fa-2x" style="vertical-align: bottom;"></i> Rest</a>
+                <a href="#rest" class="btn btn-primary js-scroll-trigger"><i class="fas fa-cloud-moon fa-2x"></i> <i class="fas fa-bed fa-2x"></i></a>
             </div>
         </div>
       <img src="img/earth.png" class="img-fluid mt-5" alt="">
