--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <h2 class="text-white mx-auto mt-5 mb-2">Develop your full potential!</h2>
         <h2 class="text-white mx-auto mt-2 mb-2">Take good care of your mind & body</h2>
         <h2 class="text-white mx-auto mt-2 mb-5">Improve your exercise, nutrition & rest</h2>
-        <a href="#triangle" class="btn btn-primary js-scroll-trigger"><i class="fas fa-caret-right"></i> Your Golden Triangle <i class="fas fa-caret-left"></i></a>
+        <a href="#triangle" class="btn btn-primary js-scroll-trigger"><i class="fas fa-caret-right"></i> Your Health Triangle <i class="fas fa-caret-left"></i></a>
       </div>
     </div>
   </header>
@@ -99,7 +99,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto">
-                <h1 class="text-white mb-4">The Golden Triangle</h1>
+                <h1 class="text-white mb-4">The Health Triangle</h1>
                 <i>
                   <h5 class="text-white mx-auto">Our physical health has 3 main components:</h5>
                   <h5 class="text-white mx-auto">The exercising - running, gym, sports, warm-up, etc.</h5>
