--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                 <i>
                   <h5 class="text-white mx-auto">Our physical health has 3 main components:</h5>
                   <h5 class="text-white mx-auto">Exercising - running, gym, sports, warm-up, etc.</h5>
-                  <h5 class="text-white mx-auto">Nutrition - macro & micronutrients, energy sources, etc.</h5>
-                  <h5 class="text-white mx-auto">Rest - sleep quality, peace of mind, stress/anxiety controln, etc.</h5>
+                  <h5 class="text-white mx-auto">Nutrition - macro & micronutrients, energy, etc.</h5>
+                  <h5 class="text-white mx-auto">Rest - sleep, peace of mind, stress/anxiety control, etc.</h5>
                   <h5 class="text-white mx-auto">vivid love for life.</h5>
                 </i>
                 <a href="#exercise" class="btn btn-primary js-scroll-trigger"><i class="fas fa-running fa-2x"></i> <i class="fas fa-dumbbell fa-2x"></i></a>
