--- a/index.html
+++ b/index.html
@@ -105,13 +105,15 @@
                   <h5 class="text-white mx-auto">Exercising - running, gym, sports, warm-up, etc.</h5>
                   <h5 class="text-white mx-auto">Nutrition - macro & micronutrients, energy, etc.</h5>
                   <h5 class="text-white mx-auto">Rest - sleep, peace of mind, stress/anxiety control, etc.</h5>
-                  <h5 class="text-white mx-auto">vivid love for life.</h5>
                 </i>
-                <a href="#exercise" class="btn btn-primary js-scroll-trigger"><i class="fas fa-running fa-2x"></i> <i class="fas fa-dumbbell fa-2x"></i></a>
                 <br/>
-                <a href="#nutrition" class="btn btn-primary js-scroll-trigger"><i class="fas fa-utensil-spoon fa-2x"></i> <i class="fas fa-apple-alt fa-2x"></i></a>
+                <a href="#exercise"><i class="fas fa-running fa-2x"></i> <i class="fas fa-dumbbell fa-2x"></i></a>
                 <br/>
-                <a href="#rest" class="btn btn-primary js-scroll-trigger"><i class="fas fa-cloud-moon fa-2x"></i> <i class="fas fa-bed fa-2x"></i></a>
+                <a href="#nutrition"><i class="fas fa-utensil-spoon fa-2x"></i> <i class="fas fa-apple-alt fa-2x"></i></a>
+                <object data="img/triangle.svg" style="height: 4em; width: 4em; vertical-align: middle;" type="image/svg+xml">
+                    <img src="img/triangle.png" style="height: 4em; width: 4em; vertical-align: middle;" />
+                </object>
+                <a href="#rest"><i class="fas fa-cloud-moon fa-2x"></i> <i class="fas fa-bed fa-2x"></i></a>
             </div>
         </div>
       <img src="img/earth.png" class="img-fluid mt-5" alt="">
