--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
                   <h5 class="text-white mx-auto">Rest - sleep, peace of mind, stress/anxiety control, etc.</h5>
                 </i>
                 <br/>
-                <a href="#exercise"><i class="fas fa-running fa-2x"></i> <i class="fas fa-dumbbell fa-2x"></i></a>
+                <a href="#exercise"><i class="fas fa-running fa-2x"></i> <i class="fas fa-dumbbell fa-2x"></i>
+                <br/>
+                Exercise
+                </a>
                 <br/>
                 <a href="#nutrition"><i class="fas fa-utensil-spoon fa-2x"></i> <i class="fas fa-apple-alt fa-2x"></i></a>
                 <object data="img/triangle.svg" style="height: 4em; width: 4em; vertical-align: middle;" type="image/svg+xml">
