--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <h1 class="text-white mb-4">The Health Triangle</h1>
                 <i>
                   <h5 class="text-white mx-auto">Our physical health has 3 main components:</h5>
-                  <h5 class="text-white mx-auto">Exercising - gym, outside & inside sports...</h5>
+                  <h5 class="text-white mx-auto">Exercise - gym, outside & inside sports...</h5>
                   <h5 class="text-white mx-auto">Nutrition - macro & micronutrients, energy...</h5>
                   <h5 class="text-white mx-auto">Rest - sleep, peace of mind, stress/anxiety control...</h5>
                 </i>
@@ -150,28 +150,42 @@
   <section id="exercise" class="projects-section bg-black">
     <div class="container">
 
-      <div class="row align-items-center no-gutters mb-4">
+      <!-- <div class="row align-items-center no-gutters mb-4">
           <div class="col-xl-12 col-lg-12">
-              <h6 class="text-white-50 text-center">EXERCISE</h6>
+              <h6 class="text-white-50 text-center"><i class="fas fa-running fa-lg"></i> EXERCISE <i class="fas fa-dumbbell fa-lg"></i></h6>
           </div>
-      </div>
+      </div> -->
       <!-- Featured Project Row -->
-      <div class="row align-items-center no-gutters mb-4 mb-lg-5 project" style="cursor: pointer;" onclick="window.open('https://iaco.me/post/001')">
+      <div class="row align-items-center no-gutters mb-4 mb-lg-5 project">
         <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0 project-img" src="img/light.jpg" alt="">
-          <div class="middle">vivaci.life</div>
+          <img class="img-fluid mb-3 mb-lg-0 project-img" src="img/gym.jpg" alt="">
+          <div class="middle">EXERCISE</div>
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4 class="text-white"><a href>vivaci.life</a></h4>
-            <h5 class="text-white mb-2">vivaci.life project is an effort to share with the world and inspire in people the love in taking good care #tgc of life, including ourselves, our beloved ones and our planet</h5>
-            <h5 class="text-white mb-0">Simply put, I love to #tgc of my life, and want to help others do the same :)</h5>
+            <h4 class="text-white"><i class="fas fa-running fa-lg"></i> EXERCISE <i class="fas fa-dumbbell fa-lg"></i></h4>
+            <h5 class="text-white mb-2">To maintain a good performance our bodies need to move.</h5>
+            <h5 class="text-white mb-2">It improves our physical health, including our cardiovascular flow, our muscle strength and volume, and prevents diseases.</h5>
+            <h5 class="text-white mb-2">And it also boost our happiness, libido and well-being, meanwhile decreases stress and anxiety.</h5>
           </div>
         </div>
       </div>
+      <div class="row align-items-center no-gutters mb-4">
+          <div class="col-xl-12 col-lg-12">
+              <h6 class="text-center mb-3">
+                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Quarantine (Bodyweight) program - soon</a>
+              </h6>
+              <h6 class="text-center mb-3">
+                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i>  program - soon</a>
+              </h6>
+              <h6 class="text-center mb-3">
+                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Push-Pull-Leg program - soon</a>
+              </h6>
+          </div>
+      </div>
 
       <!-- Project One Row -->
-      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+      <!-- <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/connection.jpg" alt="">
         </div>
@@ -187,10 +201,10 @@
             </div>
           </div>
         </div>
-      </div>
+    </div> -->
 
       <!-- Project Two Row -->
-      <div class="row justify-content-center no-gutters">
+      <!-- <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/inspire.jpg" alt="">
         </div>
@@ -205,7 +219,7 @@
             </div>
           </div>
         </div>
-      </div>
+    </div> -->
 
     </div>
   </section>
@@ -214,28 +228,43 @@
   <section id="nutrition" class="projects-section bg-black">
     <div class="container">
 
-      <div class="row align-items-center no-gutters mb-4">
+      <!-- <div class="row align-items-center no-gutters mb-4">
           <div class="col-xl-12 col-lg-12">
               <h6 class="text-white-50 text-center">NUTRITION</h6>
           </div>
-      </div>
+      </div> -->
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5 project" style="cursor: pointer;" onclick="window.open('https://iaco.me/post/001')">
         <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0 project-img" src="img/light.jpg" alt="">
-          <div class="middle">vivaci.life</div>
+          <img class="img-fluid mb-3 mb-lg-0 project-img" src="img/apple.jpg" alt="">
+          <div class="middle">NUTRITION</div>
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4 class="text-white"><a href>vivaci.life</a></h4>
-            <h5 class="text-white mb-2">vivaci.life project is an effort to share with the world and inspire in people the love in taking good care #tgc of life, including ourselves, our beloved ones and our planet</h5>
-            <h5 class="text-white mb-0">Simply put, I love to #tgc of my life, and want to help others do the same :)</h5>
+            <h4 class="text-white"><i class="fas fa-utensil-spoon fa-lg"></i> NUTRITION <i class="fas fa-apple-alt fa-lg"></i></h4>
+            <h5 class="text-white mb-2">a</h5>
+            <h5 class="text-white mb-2">a</h5>
+            <h5 class="text-white mb-2">a</h5>
+            <h5 class="text-white mb-0">a</h5>
           </div>
         </div>
       </div>
+      <div class="row align-items-center no-gutters mb-4">
+          <div class="col-xl-12 col-lg-12">
+              <h6 class="text-center mb-3">
+                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Muscle Gain diet - soon</a>
+              </h6>
+              <h6 class="text-center mb-3">
+                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Weight Loss diet - soon</a>
+              </h6>
+              <h6 class="text-center mb-3">
+                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Vegan (Plant-based) diet - soon</a>
+              </h6>
+          </div>
+      </div>
 
       <!-- Project One Row -->
-      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+      <!-- <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/connection.jpg" alt="">
         </div>
@@ -251,10 +280,10 @@
             </div>
           </div>
         </div>
-      </div>
+    </div> -->
 
       <!-- Project Two Row -->
-      <div class="row justify-content-center no-gutters">
+      <!-- <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/inspire.jpg" alt="">
         </div>
@@ -269,7 +298,7 @@
             </div>
           </div>
         </div>
-      </div>
+    </div> -->
 
     </div>
   </section>
@@ -278,28 +307,43 @@
   <section id="rest" class="projects-section bg-black">
     <div class="container">
 
-      <div class="row align-items-center no-gutters mb-4">
+      <!-- <div class="row align-items-center no-gutters mb-4">
           <div class="col-xl-12 col-lg-12">
               <h6 class="text-white-50 text-center">REST</h6>
           </div>
-      </div>
+      </div> -->
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5 project" style="cursor: pointer;" onclick="window.open('https://iaco.me/post/001')">
         <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0 project-img" src="img/light.jpg" alt="">
-          <div class="middle">vivaci.life</div>
+          <img class="img-fluid mb-3 mb-lg-0 project-img" src="img/meditation.jpg" alt="">
+          <div class="middle">REST</div>
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4 class="text-white"><a href>vivaci.life</a></h4>
-            <h5 class="text-white mb-2">vivaci.life project is an effort to share with the world and inspire in people the love in taking good care #tgc of life, including ourselves, our beloved ones and our planet</h5>
-            <h5 class="text-white mb-0">Simply put, I love to #tgc of my life, and want to help others do the same :)</h5>
+            <h4 class="text-white"><i class="fas fa-cloud-moon fa-lg"></i> REST <i class="fas fa-bed fa-lg"></i></h4>
+            <h5 class="text-white mb-2">a</h5>
+            <h5 class="text-white mb-2">a</h5>
+            <h5 class="text-white mb-2">a</h5>
+            <h5 class="text-white mb-0">a</h5>
           </div>
         </div>
       </div>
+      <div class="row align-items-center no-gutters mb-4">
+          <div class="col-xl-12 col-lg-12">
+              <h6 class="text-center mb-3">
+                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Sleep technique - soon</a>
+              </h6>
+              <h6 class="text-center mb-3">
+                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Meditation technique - soon</a>
+              </h6>
+              <h6 class="text-center mb-3">
+                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Sophrology technique - soon</a>
+              </h6>
+          </div>
+      </div>
 
       <!-- Project One Row -->
-      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+      <!-- <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/connection.jpg" alt="">
         </div>
@@ -315,10 +359,10 @@
             </div>
           </div>
         </div>
-      </div>
+    </div> -->
 
       <!-- Project Two Row -->
-      <div class="row justify-content-center no-gutters">
+      <!-- <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/inspire.jpg" alt="">
         </div>
@@ -333,7 +377,7 @@
             </div>
           </div>
         </div>
-      </div>
+    </div -->
 
     </div>
   </section>
