--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <center>
                 <table>
                     <tr>
-                        <td style="text-align: center; vertical-align: bottom;" colspan="3">
+                        <td style="text-align: center; vertical-align: bottom; font-size: 12pt;" colspan="3">
                             <a class="js-scroll-trigger" href="#exercise"><i class="fas fa-running fa-2x"></i> <i class="fas fa-dumbbell fa-2x"></i>
                             <br/>
                             Exercise
@@ -118,18 +118,18 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="text-align: center; vertical-align: bottom;">
+                        <td style="text-align: center; vertical-align: bottom; font-size: 12pt;">
                             <a class="js-scroll-trigger" href="#nutrition"><i class="fas fa-utensil-spoon fa-2x"></i> <i class="fas fa-apple-alt fa-2x"></i>
                             <br/>
                             Nutrition
                             </a>
                         </td>
-                        <td style="text-align: center;">
-                            <object data="img/triangle.svg" style="height: 15em; width: 15em;" type="image/svg+xml">
-                                <img src="img/triangle.png" style="height: 15em; width: 15em;" />
+                        <td style="text-align: center; padding: 10px;">
+                            <object data="img/triangle.svg" style="width: 15vw;" type="image/svg+xml">
+                                <img src="img/triangle.png" style="width: 15vw;" />
                             </object>
                         </td>
-                        <td style="text-align: center; vertical-align: bottom;">
+                        <td style="text-align: center; vertical-align: bottom; font-size: 12pt;">
                             <a class="js-scroll-trigger" href="#rest"><i class="fas fa-cloud-moon fa-2x"></i> <i class="fas fa-bed fa-2x"></i>
                             <br/>
                             Rest
@@ -173,10 +173,10 @@
       <div class="row align-items-center no-gutters mb-4">
           <div class="col-xl-12 col-lg-12">
               <h6 class="text-center mb-3">
-                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Quarantine (Bodyweight) program - soon</a>
+                  <a href="#contact" class="js-scroll-trigger"><i class="fas fa-comments fa-lg"></i> Personalized program - contact us</a>
               </h6>
               <h6 class="text-center mb-3">
-                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i>  program - soon</a>
+                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Quarantine (Bodyweight) program - soon</a>
               </h6>
               <h6 class="text-center mb-3">
                   <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Push-Pull-Leg program - soon</a>
@@ -242,10 +242,9 @@
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
             <h4 class="text-white"><i class="fas fa-utensil-spoon fa-lg"></i> NUTRITION <i class="fas fa-apple-alt fa-lg"></i></h4>
-            <h5 class="text-white mb-2">a</h5>
-            <h5 class="text-white mb-2">a</h5>
-            <h5 class="text-white mb-2">a</h5>
-            <h5 class="text-white mb-0">a</h5>
+            <h5 class="text-white mb-2">Our intestine is our "second brain", with more than 200 million neurons.</h5>
+            <h5 class="text-white mb-2">It has been shown that what we eat directly impacts our emotions, moods, thoughts...</h5>
+            <h5 class="text-white mb-0">That is why a balanced and proper diet is important, which should be individualized to take into account personal goals, such as weight loss, muscle gain, a healthier lifestyle...</h5>
           </div>
         </div>
       </div>
@@ -321,10 +320,12 @@
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
             <h4 class="text-white"><i class="fas fa-cloud-moon fa-lg"></i> REST <i class="fas fa-bed fa-lg"></i></h4>
-            <h5 class="text-white mb-2">a</h5>
-            <h5 class="text-white mb-2">a</h5>
-            <h5 class="text-white mb-2">a</h5>
-            <h5 class="text-white mb-0">a</h5>
+            <h5 class="text-white mb-2">The benefits of relaxation are huge, they create synergy between body and mind, restructuring the individual.</h5>
+            <h5 class="text-white mb-2">In a world where we are constantly subject to distractions, it is important to create time for us, to empty our minds, relief stress and find our well-being.</h5>
+            <h5 class="text-white mb-2">Relaxation can improve a multitude of areas: emotional, intellectual, corporeal, functional...</h5>
+            <h5 class="text-white mb-2"></h5>
+            <h5 class="text-white mb-2"></h5>
+            <h5 class="text-white mb-0"></h5>
           </div>
         </div>
       </div>
@@ -337,7 +338,7 @@
                   <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Meditation technique - soon</a>
               </h6>
               <h6 class="text-center mb-3">
-                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Sophrology technique - soon</a>
+                  <a href="#exercise" class="text-white-50 js-scroll-trigger"><i class="fas fa-hourglass-half fa-lg"></i> Breathing technique - soon</a>
               </h6>
           </div>
       </div>
